<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CantiScout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Impostazioni</string>
    <string name="title_activity_song_list">Elenco Canzoni</string>
    <string name="title_activity_canti">CantiScout</string>
    <string name="title_activity_testo">Canzone</string>
    <string name="action_search">Cerca</string>
    <string name="search_hint">Cerca</string>
    <string name="favourite">Agg. ai Preferiti</string>
    <string name="unfavourite">Rim. dai Preferiti</string>
    <string name="songbook">Canzoniere</string>
    <string name="favouriteMenu">Preferite</string>
    <string name="statistics">Statistiche</string>
    <string name="addSong">Aggiungi Canzone</string>
    <string name="downloadSuccess">Download Riuscito</string>
    <string name="downloadInsucces">Impossibile completare il download</string>
    <string name="databaseUpdated">Database Aggiornato</string>
    <string name="databaseNotUpdated">Database Già all\'ultima versione</string>
    <string name="LC">L/C</string>
    <string name="EG">E/G</string>
    <string name="RS">R/S</string>
    <string name="messa">Liturgia</string>
    <string name="others">Altro</string>
    <string name="sync">Forza Sincronia</string>
    <string name="song404">404 Impossibile trovare la canzone richiesta</string>
    <string name="report">Segnala</string>
    <string name="title_activity_splash_screen">Caricamento...</string>
    <string name="loading">Caricamento</string>
    <string name="pdfSavedSuccessfully">PDF salvato in Documenti con successo!</string>
    <string name="noPdfProgram">Nessuna applicazione per aprire i PDF sul telefono</string>

</resources>
